update device.json structure. implement stupid dump option for all devices as output.

--- a/app/client/stylesheets/default.css
+++ b/app/client/stylesheets/default.css
@@ -66,6 +66,13 @@ body, html {
     color: red;
 }
 
+.packageName {
+    font-weight: bold;
+    font-size: xx-large;
+    margin-top: 32px;
+    border-top: solid 5px;
+}
+
 .maybeCodeJunction {
     display: inline;
 }
