--- a/app/client/views/api_description.html
+++ b/app/client/views/api_description.html
@@ -1,6 +1,6 @@
 <template name="api">
   <h2 id="api-title">Maybe API</h2>
-  <div id="api-content" class="hidden">
+  <div id="api-content">
     <h3>Devices APIs</h3>
     Get all of the devices records:
     <pre>
