--- a/app/client/views/device_item.html
+++ b/app/client/views/device_item.html
@@ -6,6 +6,8 @@
         Sent notification
       </button>
     </div>
-    {{{deviceHtmlCode}}}
+    <div class="deviceDetail">
+      {{{deviceHtmlCode}}}
+    </div>
   </div>
 </template>
