hide send nottification button when device has no gcmid

--- a/app/client/views/device_item.html
+++ b/app/client/views/device_item.html
@@ -1,11 +1,13 @@
 <template name="deviceItem">
   <div class="device">
     <h3 class="deviceID">{{deviceid}}</h3>
+    {{#if hasGCMid}}
     <div class="button">
       <button>
         Sent notification
       </button>
     </div>
+    {{/if}}
     <div class="deviceDetail">
       {{{deviceHtmlCode}}}
     </div>
