update Maybe RESTFul APIs documents from README.md

--- a/app/client/stylesheets/default.css
+++ b/app/client/stylesheets/default.css
@@ -96,6 +96,10 @@ body, html {
     border-bottom: dotted 1px;
 }
 
+#devices-container {
+    border-top: solid 1px;
+}
+
 .deviceDetail {
     display: none;
 }
