--- a/app/client/stylesheets/default.css
+++ b/app/client/stylesheets/default.css
@@ -32,7 +32,7 @@ body, html {
     text-align: center;
 }
 
-#api-title:hover, .subtitle:hover, .deviceID:hover {
+#api-title:hover, .subtitle:hover, .deviceID:hover, .packageName:hover {
     color: red;
 }
 
@@ -56,7 +56,10 @@ body, html {
     font-weight: bold;
     font-size: xx-large;
     margin-top: 32px;
-    border-top: solid 5px;
+}
+
+.package {
+    border-bottom: solid 3px;
 }
 
 .maybeCodeJunction {
