change font size for package name

--- a/app/client/stylesheets/default.css
+++ b/app/client/stylesheets/default.css
@@ -54,7 +54,7 @@ body, html {
 
 .packageName {
     font-weight: bold;
-    font-size: xx-large;
+    font-size: large;
     margin-top: 32px;
 }
 
