--- a/app/client/stylesheets/default.css
+++ b/app/client/stylesheets/default.css
@@ -54,11 +54,12 @@ body, html {
 
 .packageName {
     font-weight: bold;
-    font-size: large;
+    font-size: x-large;
+    padding: 8px 0 8px 0;
 }
 
 .package {
-    border-bottom: solid 1px;
+    border-bottom: dotted 1px;
 }
 
 .maybeCodeJunction {
@@ -102,6 +103,6 @@ body, html {
     border-top: solid 2px;
 }
 
-.deviceDetail {
+.deviceDetail, .packageDetail {
     display: none;
 }
