--- a/app/client/stylesheets/default.css
+++ b/app/client/stylesheets/default.css
@@ -32,8 +32,13 @@ body, html {
     text-align: center;
 }
 
-#api-title:hover, .subtitle:hover, .deviceID:hover, .packageName:hover {
+#api-title:hover,
+.subtitle:hover,
+.deviceID:hover,
+.packageName:hover,
+.option:hover {
     color: red;
+    font-weight: bold;
 }
 
 #api-content {
@@ -75,9 +80,16 @@ body, html {
     background-color: #9fffff;
 }
 
-.maybeCodeBlockHover {
-    font-weight: bold;
-    color: red;
+.alternatives {
+    /* border: solid 3px; */
+}
+
+.options {
+    float: left;
+}
+
+.option-container {
+    float: left;
 }
 
 .option {
@@ -88,6 +100,11 @@ body, html {
 
 .optionChoosed {
     background-color: #9fffff;
+}
+
+.code {
+    clear: both;
+    padding-top: 8px;
 }
 
 .statement {
