change click logic to label name add favicon.ico

--- a/app/client/stylesheets/default.css
+++ b/app/client/stylesheets/default.css
@@ -80,6 +80,10 @@ body, html {
     background-color: #9fffff;
 }
 
+.label {
+    padding: 12px 0 12px 0;
+}
+
 .alternatives {
     /* border: solid 3px; */
 }
