temp work, can show choices by deviceid

--- a/app/client/stylesheets/default.css
+++ b/app/client/stylesheets/default.css
@@ -124,6 +124,8 @@ body, html {
     border-top: solid 2px;
 }
 
-.deviceDetail, .packageDetail {
+.config-container,
+.deviceDetail,
+.packageDetail {
     display: none;
 }
