default turn of detail view

--- a/app/client/stylesheets/default.css
+++ b/app/client/stylesheets/default.css
@@ -126,7 +126,7 @@ body, html {
 .config-container,
 .deviceDetail,
 .packageDetail {
-    /* display: none; */
+    display: none;
 }
 
 #config-container {
