change api description to a static html page

--- a/app/client/views/api_description.html
+++ b/app/client/views/api_description.html
@@ -1,259 +1,3 @@
 <template name="api">
-  <h2 id="api-title">Maybe RESTFul APIs <a href="https://travis-ci.org/xcv58/backend"><img src="https://travis-ci.org/xcv58/backend.svg?branch=meteor" alt="Build Status"></a></h2>
-  <div id="api-content">
-    <h3 id="table-of-contents">Table of Contents</h3>
-    <ul>
-    <li><a href="#restful-apis">RESTFul APIs</a><ul>
-    <li><a href="#devices">devices</a><ul>
-    <li><a href="#post">POST</a></li>
-    <li><a href="#get">GET</a></li>
-    <li><a href="#put">PUT</a></li>
-    <li><a href="#delete">DELETE</a></li>
-    </ul>
-    </li>
-    <li><a href="#metadata">metadata</a><ul>
-    <li><a href="#post-1">POST</a></li>
-    <li><a href="#get-1">GET</a></li>
-    <li><a href="#put-1">PUT</a></li>
-    <li><a href="#delete-1">DELETE</a></li>
-    </ul>
-    </li>
-    <li><a href="#logs">logs</a><ul>
-    <li><a href="#post-2">POST</a></li>
-    <li><a href="#get-2">GET</a></li>
-    <li><a href="#put-2">PUT</a></li>
-    <li><a href="#delete-2">DELETE</a></li>
-    </ul>
-    </li>
-    </ul>
-    </li>
-    </ul>
-    <hr>
-    <h3 id="restful-apis">RESTFul APIs</h3>
-    <p>This backend server provides three categories of APIs.</p>
-    <h2 id="devices">devices</h2>
-    <p>The devices API is designed for store choices of every deive, so we use <code>deviceid</code> as key. Every device should only have one entry inside the colection.</p>
-    <h3 id="post">POST</h3>
-    <p>Create a new record for specific <code>deviceid</code>.</p>
-    <pre><code>$ curl http://localhost:3000/maybe-api-v1/devices -d &#39;{&quot;deviceid&quot;: &quot;001&quot;}&#39;
-    </code></pre><p>If everything good, it will return a JSONObject with status code <code>201</code> like this:</p>
-    <pre><code class="lang-json">[
-      {
-        &quot;choices&quot;: {
-          &quot;1aab3f28f3d0ead580c3c22b10fee7e81c75e6d1e8f957611aedf51e&quot;: {
-            &quot;labels&quot;: [
-              {
-                &quot;choice&quot;: 0,
-                &quot;label&quot;: &quot;simple test&quot;
-              },
-              {
-                &quot;choice&quot;: 0,
-                &quot;label&quot;: &quot;another test&quot;
-              },
-              {
-                &quot;choice&quot;: 0,
-                &quot;label&quot;: &quot;block test&quot;
-              },
-              {
-                &quot;choice&quot;: 0,
-                &quot;label&quot;: &quot;third block test&quot;
-              },
-              {
-                &quot;choice&quot;: 0,
-                &quot;label&quot;: &quot;another block test&quot;
-              }
-            ],
-            &quot;name&quot;: &quot;testing_inputs.maybe&quot;
-          }
-        },
-        &quot;queryCount&quot;: 1,
-        &quot;deviceid&quot;: &quot;001&quot;
-      }
-    ]
-    </code></pre>
-    <p>If the <code>deviceid</code> is duplicated, its status code <code>500</code>, content like this:</p>
-    <pre><code>{ &quot;error&quot;: &quot;MongoError: E11000 duplicate key error index: meteor.devices.$_id_  dup key: { : \&quot;001\&quot; }&quot; }
-    </code></pre><p>If something wrong, its status code <code>409</code>, content like this:</p>
-    <pre><code>{ &quot;message&quot;: &quot;Could not post that object.&quot; }
-    </code></pre><h3 id="get">GET</h3>
-    <p>Get all of the devices:</p>
-    <pre><code>$ curl http://localhost:3000/maybe-api-v1/devices
-    </code></pre><p>Get a device record:</p>
-    <pre><code>$ curl http://localhost:3000/maybe-api-v1/devices/001
-    </code></pre><p>If sucess, it will return an array of JSONObjects.</p>
-    <h3 id="put">PUT</h3>
-    <p>Update a deivce:</p>
-    <pre><code>$ curl http://localhost:3000/maybe-api-v1/devices/001 -X PUT -d &#39;{&quot;$set&quot;: {&quot;a&quot; : &quot;c&quot;}}&#39;
-    </code></pre><p>If sucess, it will return a JSONObjects.</p>
-    <pre><code>$ curl http://localhost:3000/maybe-api-v1/devices/001?callback=0 -X PUT -d &#39;{&quot;$set&quot;: {&quot;a&quot; : &quot;c&quot;}}&#39;
-    </code></pre><p>With <code>?callback=0</code>, it will return a JSONObjects to indicate the PUT&#39;s status:</p>
-    <pre><code>{&quot;status&quot;:&quot;success&quot;}
-    </code></pre><h3 id="delete">DELETE</h3>
-    <p>Delete a record:</p>
-    <pre><code>$ curl http://localhost:3000/maybe-api-v1/devices/001 -X DELETE
-    </code></pre><p>If sucess, it will return empty content with  status code <code>200</code>. Otherwise, the output looks like:</p>
-    <pre><code>{&quot;message&quot;:&quot;Could not delete that object.&quot;}
-    </code></pre><h2 id="metadata">metadata</h2>
-    <p>The metadata need special schema, it should contains at least <code>sha224_hash</code> with a string, <code>pacakge</code> with a string, and <code>statements</code> with a JSONArray.</p>
-    <p>The elements in <code>statements</code> should have</p>
-    <ol>
-    <li><code>content</code> with Java code snippet (string),</li>
-    <li><code>line</code> with a number to indicate start number in source code,</li>
-    <li><code>type</code> and <code>label</code> with string separately,</li>
-    <li><code>alternatives</code> with a JSONArray, each element should contains <code>start</code>, <code>end</code>, <code>value</code> with a number separately.</li>
-    </ol>
-    <p>You can check from <a href="https://github.com/xcv58/backend/blob/meteor/doc/maybe_meta.json">metadata JSONObject </a> or below example:</p>
-    <pre><code class="lang-json">{
-        &quot;sha224_hash&quot;: &quot;1aab3f28f3d0ead580c3c22b10fee7e81c75e6d1e8f957611aedf51e&quot;,
-        &quot;package&quot;: &quot;testing_inputs.maybe&quot;,
-        &quot;statements&quot;: [
-            {
-                &quot;content&quot;: &quot;int i = maybe(\&quot;simple test\&quot;) 1, 2;&quot;,
-                &quot;alternatives&quot;: [
-                    {
-                        &quot;start&quot;: 29,
-                        &quot;end&quot;: 30,
-                        &quot;value&quot;: 0
-                    },
-                    {
-                        &quot;start&quot;: 32,
-                        &quot;end&quot;: 33,
-                        &quot;value&quot;: 1
-                    }
-                ],
-                &quot;line&quot;: 5,
-                &quot;type&quot;: &quot;assignment&quot;,
-                &quot;label&quot;: &quot;simple test&quot;
-            },
-            {
-                &quot;content&quot;: &quot;public String test = maybe(\&quot;another test\&quot;) \&quot;one\&quot;,\&quot;two\&quot;,   \&quot;three\&quot;;&quot;,
-                &quot;alternatives&quot;: [
-                    {
-                        &quot;start&quot;: 43,
-                        &quot;end&quot;: 48,
-                        &quot;value&quot;: 0
-                    },
-                    {
-                        &quot;start&quot;: 49,
-                        &quot;end&quot;: 54,
-                        &quot;value&quot;: 1
-                    },
-                    {
-                        &quot;start&quot;: 58,
-                        &quot;end&quot;: 65,
-                        &quot;value&quot;: 2
-                    }
-                ],
-                &quot;line&quot;: 6,
-                &quot;type&quot;: &quot;assignment&quot;,
-                &quot;label&quot;: &quot;another test&quot;
-            },
-            {
-                &quot;content&quot;: &quot;maybe (\&quot;block test\&quot;) {\n  if (\&quot;true\&quot;) {\n    i = 0;\n  } else {\n    j = 0;\n    maybe (\&quot;third block test\&quot;) {\n      i = 1;\n    } or {\n      j = 2;\n    } or {\n      j = 3;\n    }\n  }\n} or {\n  i = 1;\n} or {\n  j = 2;\n  maybe (\&quot;another block test\&quot;) {\n    j = 3;\n  }\n}&quot;,
-                &quot;alternatives&quot;: [
-                    {
-                        &quot;start&quot;: 22,
-                        &quot;end&quot;: 177,
-                        &quot;value&quot;: 0
-                    },
-                    {
-                        &quot;start&quot;: 182,
-                        &quot;end&quot;: 193,
-                        &quot;value&quot;: 1
-                    },
-                    {
-                        &quot;start&quot;: 198,
-                        &quot;end&quot;: 257,
-                        &quot;value&quot;: 2
-                    }
-                ],
-                &quot;line&quot;: 20,
-                &quot;type&quot;: &quot;block&quot;,
-                &quot;label&quot;: &quot;block test&quot;
-            },
-            {
-                &quot;content&quot;: &quot;    maybe (\&quot;third block test\&quot;) {\n      i = 1;\n    } or {\n      j = 2;\n    } or {\n      j = 3;\n    }&quot;,
-                &quot;alternatives&quot;: [
-                    {
-                        &quot;start&quot;: 32,
-                        &quot;end&quot;: 51,
-                        &quot;value&quot;: 0
-                    },
-                    {
-                        &quot;start&quot;: 56,
-                        &quot;end&quot;: 75,
-                        &quot;value&quot;: 1
-                    },
-                    {
-                        &quot;start&quot;: 80,
-                        &quot;end&quot;: 99,
-                        &quot;value&quot;: 2
-                    }
-                ],
-                &quot;line&quot;: 25,
-                &quot;type&quot;: &quot;block&quot;,
-                &quot;label&quot;: &quot;third block test&quot;
-            },
-            {
-                &quot;content&quot;: &quot;  maybe (\&quot;another block test\&quot;) {\n    j = 3;\n  }&quot;,
-                &quot;alternatives&quot;: [
-                    {
-                        &quot;start&quot;: 32,
-                        &quot;end&quot;: 47,
-                        &quot;value&quot;: 0
-                    }
-                ],
-                &quot;line&quot;: 37,
-                &quot;type&quot;: &quot;block&quot;,
-                &quot;label&quot;: &quot;another block test&quot;
-            }
-        ]
-    }
-    </code></pre>
-    <h3 id="post">POST</h3>
-    <p>Create a new record for specific <code>metadata</code>.</p>
-    <pre><code>$ curl http://localhost:3000/maybe-api-v1/metadata -d &#39;you json object&#39;
-    </code></pre><p>It will use <code>sha224_hash</code> as <code>_id</code> in MongoDB:
-    If everything good, it will return a JSONObject with status code <code>201</code>.</p>
-    <p>If the <code>sha224_hash</code> is duplicated, its status code <code>500</code>, content like this:</p>
-    <pre><code>{&quot;error&quot;:&quot;MongoError: E11000 duplicate key error index: meteor.metadata.$_id_  dup key: { : \&quot;1aab3f28f3d0ead580c3c22b10fee7e81c75e6d1e8f957611aedf51e\&quot; }&quot;}%
-    </code></pre><p>If something wrong, its status code <code>409</code>, content like this:</p>
-    <pre><code>{ &quot;message&quot;: &quot;Could not post that object.&quot; }
-    </code></pre><h3 id="get">GET</h3>
-    <p>Get all of the metadata records:</p>
-    <pre><code>$ curl http://localhost:3000/maybe-api-v1/metadata
-    </code></pre><p>Get a device record:</p>
-    <pre><code>$ curl http://localhost:3000/maybe-api-v1/metadata/1aab3f28f3d0ead580c3c22b10fee7e81c75e6d1e8f957611aedf51e
-    </code></pre><p>If sucess, it will return an array of JSONObjects.</p>
-    <h3 id="put">PUT</h3>
-    <p>TODO: example doesn&#39;t fit for metadata.</p>
-    <p>Update a metadata:</p>
-    <pre><code>$ curl http://localhost:3000/maybe-api-v1/metadata/1aab3f28f3d0ead580c3c22b10fee7e81c75e6d1e8f957611aedf51e -X PUT -d &#39;{&quot;$set&quot;: {&quot;a&quot; : &quot;c&quot;}}&#39;
-    </code></pre><p>If sucess, it will return a JSONObjects.</p>
-    <pre><code>$ curl http://localhost:3000/maybe-api-v1/metadata/1aab3f28f3d0ead580c3c22b10fee7e81c75e6d1e8f957611aedf51e?callback=0 -X PUT -d &#39;{&quot;$set&quot;: {&quot;a&quot; : &quot;c&quot;}}&#39;
-    </code></pre><p>With <code>?callback=0</code>, it will return a JSONObjects to indicate the PUT&#39;s status:</p>
-    <pre><code>{&quot;status&quot;:&quot;success&quot;}
-    </code></pre><h3 id="delete">DELETE</h3>
-    <p>Delete a record:</p>
-    <pre><code>$ curl http://localhost:3000/maybe-api-v1/metadata/1aab3f28f3d0ead580c3c22b10fee7e81c75e6d1e8f957611aedf51e -X DELETE
-    </code></pre><p>If sucess, it will return empty content with  status code <code>200</code>. Otherwise, the output looks like:</p>
-    <pre><code>{&quot;message&quot;:&quot;Could not delete that object.&quot;}%
-    </code></pre><h2 id="logs">logs</h2>
-    <p>The logs api will let you store logs from devices. So each record represents a log entry. Currently, you are only allowed to use POST method.</p>
-    <h3 id="post">POST</h3>
-    <p>This is the only thing you can do with the <code>logs</code> api.</p>
-    <pre><code>$ curl http://localhost:3000/maybe-api-v1/logs/deviceid -d &#39;{&quot;a&quot; : 1, &quot;sha224_hash&quot; : &quot;1aab3f28f3d0ead580c3c22b10fee7e81c75e6d1e8f957611aedf51e&quot;, &quot;label&quot;: &quot;simple test&quot;}&#39;
-    </code></pre><p>Note that, the JSONObject must have keys <code>sha224_hash</code> and <code>label</code> to represent its <code>package hash</code> and <code>label</code> respectively!
-    Otherwise, the server will not allow the POST operation.</p>
-    <p>If everything good (I hope that),  it will return a JSONObject with status code <code>201</code>:</p>
-    <pre><code>[{&quot;a&quot;:1,&quot;_metadata&quot;:{&quot;deviceid&quot;:&quot;deviceid&quot;,&quot;timestamp&quot;:1425851460385},&quot;_id&quot;:&quot;CBZNtSBgHf3MBprnX&quot;}]
-    </code></pre><p>You should pass your real <code>deviceid</code> instead of the <code>deviceid</code> in url above. The data content can be arbitrary JSONObject, but you can not use the key: <strong><code>_metadata</code></strong>, it&#39;s reversed for log analysis.</p>
-    <h3 id="get">GET</h3>
-    <p>You shouldn&#39;t GET log(s), because the log analysis is processing offline.</p>
-    <h3 id="put">PUT</h3>
-    <p>You shouldn&#39;t PUT (change) log, because the log is unchangeable.</p>
-    <h3 id="delete">DELETE</h3>
-    <p>You shouldn&#39;t DELETE log(s), we&#39;ll archive logs offline.</p>
-
-  </div>
+  <h2 id="api-title"><a href="README.html">Maybe RESTFul APIs</a></h2>
 </template>
