add iron:router, use iron:router to redirect to README.html

--- a/app/client/views/api_description.html
+++ b/app/client/views/api_description.html
@@ -1,3 +1,3 @@
 <template name="api">
-  <h2 id="api-title"><a href="README.html">Maybe RESTFul APIs</a></h2>
+  <h2 id="api-title">Maybe RESTFul APIs</h2>
 </template>
