use Template.subscriptionsReady instead of dataReady

--- a/app/client/views/device_item.html
+++ b/app/client/views/device_item.html
@@ -1,6 +1,6 @@
 <template name="deviceItem">
   <div class="device">
-    {{#if dataReady}}
+    {{#if Template.subscriptionsReady}}
       <h3 class="deviceID">{{deviceid}}</h3>
       {{#if hasGCMid}}
         <div class="button">
