--- a/app/client/stylesheets/default.css
+++ b/app/client/stylesheets/default.css
@@ -1,7 +1,8 @@
 /* CSS declarations go here */
 body, html {
-    height: 100%;
-    /*background-color: red;*/
+    padding-top: 32px;
+    /* height: 100%; */
+   /*background-color: red;*/
 }
 
 #board {
