use iframe to render /api from /README.html

--- a/app/client/views/api_description.html
+++ b/app/client/views/api_description.html
@@ -1,3 +1,4 @@
 <template name="api">
-  <h2 id="api-title">Maybe RESTFul APIs</h2>
+  {{> nav}}
+  <iframe src="/README.html" frameborder="0"></iframe>
 </template>
