--- a/app/client/stylesheets/default.css
+++ b/app/client/stylesheets/default.css
@@ -165,3 +165,11 @@ body, html {
 /* li.selected { */
 /*     background-color:GoldenRod */
 /* } */
+
+
+iframe {
+    position:absolute;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+}
