--- a/app/client/stylesheets/default.css
+++ b/app/client/stylesheets/default.css
@@ -1,13 +1,18 @@
 /* CSS declarations go here */
-body, html {
-    padding-top: 32px;
-    margin: auto;
+body {
+    margin-top: 51px;
+    margin-left: auto;
+    margin-right: auto;
     max-width: 80em;
-    padding-left: 1em;
-    padding-right: 1em;
-    /* height: 100%; */
-   /*background-color: red;*/
+    padding: 1em;
 }
+
+@media only screen and (max-device-width: 480px) {
+    body {
+        max-width: 80em;
+        padding: 1em;
+    }
+} /* @Phones */
 
 #board {
     /* position:relative; */
@@ -149,31 +154,4 @@ body, html {
 
 .optionList {
     clear: both;
-}
-
-/* ul { */
-/*     border:1px solid Black; */
-/*     height:200px; */
-/*     display:inline-block; */
-/*     vertical-align:top; */
-/*     list-style-type: none; */
-/* } */
-
-/* li { */
-/*     float: left; */
-/*     display: block; */
-/*     background-color:Azure; */
-/*     border-bottom:1px dotted Gray */
-/* } */
-
-/* li.selected { */
-/*     background-color:GoldenRod */
-/* } */
-
-
-iframe {
-    position:absolute;
-    left: 0px;
-    width: 100%;
-    height: 100%;
 }
