--- a/app/client/stylesheets/default.css
+++ b/app/client/stylesheets/default.css
@@ -14,28 +14,16 @@ body {
     }
 } /* @Phones */
 
-#board {
-    /* position:relative; */
-    text-align: left;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    min-width: 200px;
-    max-width: 1920px;
-    padding-top: 0px;
-    padding-bottom: 0px;
-    padding-left: 32px;
-    padding-right: 32px;
-    /* height: 100%; */
-    width: 64%;
-    /* overflow: auto; */
-    background-color: white;
-    float: center;
-    border-left-style: solid;
-    border-right-style: solid;
-    border-width: 1px;
+.flex-container {
+    display: -webkit-flex;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.flex-row {
+    flex: 1;
+    flex-direction: row;
 }
 
 #title {
