--- a/app/client/stylesheets/default.css
+++ b/app/client/stylesheets/default.css
@@ -18,7 +18,7 @@ body {
     display: -webkit-flex;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: stretch;
 }
 
 .flex-row {
