--- a/app/client/stylesheets/default.css
+++ b/app/client/stylesheets/default.css
@@ -14,16 +14,20 @@ body {
     }
 } /* @Phones */
 
-.flex-container {
+.flex-column {
     display: -webkit-flex;
     display: flex;
+    flex: 1;
     flex-direction: column;
-    align-items: stretch;
 }
 
 .flex-row {
+    display: -webkit-flex;
+    display: flex;
     flex: 1;
     flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 #title {
