--- a/app/client/stylesheets/range.css
+++ b/app/client/stylesheets/range.css
@@ -1,85 +1,85 @@
 input[type=range] {
   -webkit-appearance: none;
   width: 100%;
-  margin: 19.8px 0;
+  margin: 5px 0;
 }
 input[type=range]:focus {
   outline: none;
 }
 input[type=range]::-webkit-slider-runnable-track {
   width: 100%;
-  height: 8.4px;
+  height: 22px;
   cursor: pointer;
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  background: #3071a9;
-  border-radius: 1.3px;
-  border: 0.2px solid #010101;
+  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+  background: rgba(48, 113, 169, 0.78);
+  border-radius: 0px;
+  border: 0px solid #000000;
 }
 input[type=range]::-webkit-slider-thumb {
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  border: 1px solid #000000;
-  height: 48px;
-  width: 24px;
-  border-radius: 4px;
+  box-shadow: 0px 0px 0px #000031, 0px 0px 0px #00004b;
+  border: 1px solid #00001e;
+  height: 32px;
+  width: 32px;
+  border-radius: 0px;
   background: #ffffff;
   cursor: pointer;
   -webkit-appearance: none;
-  margin-top: -20px;
+  margin-top: -5px;
 }
 input[type=range]:focus::-webkit-slider-runnable-track {
-  background: #367ebd;
+  background: rgba(67, 139, 201, 0.78);
 }
 input[type=range]::-moz-range-track {
   width: 100%;
-  height: 8.4px;
+  height: 22px;
   cursor: pointer;
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  background: #3071a9;
-  border-radius: 1.3px;
-  border: 0.2px solid #010101;
+  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+  background: rgba(48, 113, 169, 0.78);
+  border-radius: 0px;
+  border: 0px solid #000000;
 }
 input[type=range]::-moz-range-thumb {
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  border: 1px solid #000000;
-  height: 48px;
-  width: 24px;
-  border-radius: 4px;
+  box-shadow: 0px 0px 0px #000031, 0px 0px 0px #00004b;
+  border: 1px solid #00001e;
+  height: 32px;
+  width: 32px;
+  border-radius: 0px;
   background: #ffffff;
   cursor: pointer;
 }
 input[type=range]::-ms-track {
   width: 100%;
-  height: 8.4px;
+  height: 22px;
   cursor: pointer;
   background: transparent;
   border-color: transparent;
   color: transparent;
 }
 input[type=range]::-ms-fill-lower {
-  background: #2a6495;
-  border: 0.2px solid #010101;
-  border-radius: 2.6px;
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  background: rgba(37, 86, 129, 0.78);
+  border: 0px solid #000000;
+  border-radius: 0px;
+  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
 }
 input[type=range]::-ms-fill-upper {
-  background: #3071a9;
-  border: 0.2px solid #010101;
-  border-radius: 2.6px;
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  background: rgba(48, 113, 169, 0.78);
+  border: 0px solid #000000;
+  border-radius: 0px;
+  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
 }
 input[type=range]::-ms-thumb {
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  border: 1px solid #000000;
-  height: 48px;
-  width: 24px;
-  border-radius: 4px;
+  box-shadow: 0px 0px 0px #000031, 0px 0px 0px #00004b;
+  border: 1px solid #00001e;
+  height: 32px;
+  width: 32px;
+  border-radius: 0px;
   background: #ffffff;
   cursor: pointer;
-  height: 8.4px;
+  height: 22px;
 }
 input[type=range]:focus::-ms-fill-lower {
-  background: #3071a9;
+  background: rgba(48, 113, 169, 0.78);
 }
 input[type=range]:focus::-ms-fill-upper {
-  background: #367ebd;
+  background: rgba(67, 139, 201, 0.78);
 }
