optimize view for log

--- a/app/client/stylesheets/default.css
+++ b/app/client/stylesheets/default.css
@@ -163,6 +163,11 @@ body {
     clear: both;
 }
 
+.log-device {
+    display: flex;
+    flex-direction: column;
+}
+
 .flex-label {
     font-size: large;
     margin-top: 16px;
