--- a/app/client/stylesheets/default.css
+++ b/app/client/stylesheets/default.css
@@ -202,3 +202,8 @@ body {
 .package-choices {
     border-bottom: dotted 1px;
 }
+
+.login-text {
+    font-size: 26px;
+    word-break: break-all;
+}
